2005-02-09  John W. Eaton  <jwe@octave.org>

	* polynomial/polyderiv.m: Force P to be a row vector.

2005-02-08  John W. Eaton  <jwe@octave.org>

	* strings/dec2base.m: Don't delete leading zero if third arg is
	provided and len <= computed max_len.

2005-01-27  David Bateman  <dbateman@free.fr>

	* strings/dec2base.m: Be even more careful about handling all digits.

2005-01-27  Paul Kienzle  <pkienzle@users.sf.net>

	* strings/dec2base.m: Use integer arithmetic to count number of digits.

2005-01-27  Benjamin Hall  <benjamin.hall@pw.utc.com>

	* statistics/base/median.m: Make it work for the scalar case too.

2005-01-25  Daniel J Sebald  <daniel.sebald@ieee.org>.

	* plot/__plt__.m: Initialize fmt and sep outside of loop.
	Simplify logic for decoding args.

2005-01-24  John W. Eaton  <jwe@octave.org>

	* plot/__plr__.m, plot/__plr2__.m: Pass name of caller to __plt__.

	* plot/__plt__.m: No need to save and reset hold state now.
	(first_plot): Delete unused variable.

	* plot/__plr2__.m, plot/__plt2__.m: Improve diagnostics.

	* plot/__plr__.m: Use __plt__, not specific __pltXX__ functions.
	* plot/__plt1__.m, plot/__plt2__.m, plot/__plt2mm__.m,
	plot/__plt2mv__.m, plot/__plt2ss__.m, plot/__plt2vm__.m,
	plot/__plt2vv__.m:
	Return data and gnuplot commands instead of evaluating them.
	* plot/__plt__.m: Handle evaluation of all gnuplot commands here.
	Based on changes from Daniel J Sebald <daniel.sebald@ieee.org>.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* linear-algebra/cross.m: Allocate idx1 before use.

2004-12-08  Heikki Junes  <Heikki.Junes@hut.fi>

	* statistics/base/range.m: Fix varargin usage.

2004-12-02  Pascal A. Dupuis  <Pascal.Dupuis@esat.kuleuven.ac.be>

	* strings/deblank.m: Remove all trailing whitespace (check with
	isspace), not just SPC.

2004-12-02  Balint Reczey  <balint_reczey@yahoo.com>

	* statistics/base/moment.m: Fix argument parsing for N-d arrays.

2004-11-09  John W. Eaton  <jwe@octave.org>
