@@ -1,3 +1,10 @@
+2005-02-21  John W. Eaton  <jwe@octave.org>
+
+	* DLD-FUNCTIONS/gplot.l (send_to_plot_stream):
+	Replot with no previous plot is a no-op.
+	(makeplot): Likewise.
+	(Vautomatic_replot): Don't use this variable in low-level functions.
+
 2005-02-18  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.in (oct-gperf.h): Remove -E from list of gperf options.
